# AlgorithmsCourseVKtechnopark

hw1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
hw3/task1/: ArcGraph.cpp  ArcGraph.h  CMakeLists.txt  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h  SetGraph.cpp  SetGraph.h  main.cpp
hw3/task3/: main.cpp
hw3/task5/: IGraph.h  ListGraph.cpp  ListGraph.h  main.cpp
